fix overflowing underline

--- a/app/stats/localComponents/HallOfFame/HallOfFame.module.scss
+++ b/app/stats/localComponents/HallOfFame/HallOfFame.module.scss
@@ -63,6 +63,7 @@
   border-bottom: 1px solid transparent;
   color: $color-gray-50;
   transition: all 0.2s;
+  max-width: min-content;
 
   &:hover {
     border-bottom: 1px solid $color-gray-50;
